--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
 	"minimum-stability": "dev",
 	"require": {
 		"php": ">=5.3.2",
-		"symfony/framework-bundle": ">=2.1,<2.3-dev"
+		"symfony/framework-bundle": "2.2.*"
 	},
 	"autoload": {
 		"psr-0": { "NS\\DeployBundle": "" }
