--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,7 @@
 	],
 	"minimum-stability": "dev",
 	"require": {
-		"php": ">=5.3.2",
-		"symfony/framework-bundle": "2.2.*"
+		"php": ">=5.3.2"
 	},
 	"autoload": {
 		"psr-0": { "NS\\DeployBundle": "" }
