--- a/Resources/config/ns_admin.navigation.yml
+++ b/Resources/config/ns_admin.navigation.yml
@@ -3,3 +3,7 @@
     name: 'ns_deploy_backup'
     parent: 'settings'
     action: 'backups:index'
+    pages:
+        -
+            label: 'Серверы'
+            action: 'servers:index'
